traces/bug_73.txt
src/medit/inout_morice.c:63: error: DEAD_STORE
  The value written to &keyseE (type char[3*1](&)) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:63:3: Write of unused value
61.     int     i;
62.     int     lench;
63.     char    keyseE[]="eE"; 
        ^
64.     char    keyse[]="e"; 
65.     float   res;
